--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Inicio - Mi Sitio con Accesibilidad</title>
-    <link rel="stylesheet" href="style.css"> </head>
+    <link rel="stylesheet" href="style.css"> 
+</head>
 <body>
     <header>
         <h1>¡Bienvenido a Mi Sitio de Prueba!</h1>
+        <button id="toggle-theme-btn" aria-label="Alternar modo claro y oscuro">🌙 Oscuro</button>
     </header>
     <nav>
         <ul>
@@ -31,5 +33,7 @@
         <p>&copy; 2025 Mi Sitio de Prueba. Todos los derechos reservados.</p>
         <p>Sitio creado para el trabajo práctico final con foco en accesibilidad.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
