--- a/registro.html
+++ b/registro.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Registro de Usuario - Mi Sitio con Accesibilidad</title>
-    <link rel="stylesheet" href="style.css"> </head>
+    <link rel="stylesheet" href="style.css"> 
+</head>
 <body>
     <header>
         <h1>Registro de Usuario</h1>
+        <button id="toggle-theme-btn" aria-label="Alternar modo claro y oscuro">🌙 Oscuro</button>
     </header>
     <nav>
         <ul>
@@ -28,7 +30,7 @@
 
                 <label for="email_reg">Correo Electrónico:</label><br>
                 <input type="email" id="email_reg" name="email_reg" aria-label="Introduce tu dirección de correo electrónico" required pattern="[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,}$" title="Por favor, introduce un formato de correo electrónico válido."><br><br>
-
+                
                 <label for="password_reg">Contraseña:</label><br>
                 <input type="password" id="password_reg" name="password_reg" aria-label="Introduce tu contraseña" required pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}" title="Debe contener al menos un número, una mayúscula, una minúscula y tener al menos 8 caracteres."><br><br>
 
@@ -37,7 +39,7 @@
 
                 <label for="telefono_reg">Número de Teléfono (Paraguay):</label><br>
                 <input type="tel" id="telefono_reg" name="telefono_reg" aria-label="Introduce tu número de teléfono de Paraguay" placeholder="Ej: 0981123456" pattern="^(09[6-9][0-9]{7}|[0-9]{6,8})$" title="Formato: 09XX XXX XXX o 6-8 dígitos para fijos." required><br><br>
-
+                
                 <button type="submit">Registrarse</button>
             </form>
         </section>
@@ -45,5 +47,7 @@
     <footer>
         <p>&copy; 2025 Mi Sitio de Prueba. Todos los derechos reservados.</p>
     </footer>
+
+    <script src="script.js"></script>
 </body>
 </html>
