--- a/acerca.html
+++ b/acerca.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acerca de - Mi Sitio con Accesibilidad</title>
+    <title>Acerca de - Aprende Informática Fácil</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
@@ -15,7 +15,7 @@
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="acerca.html">Acerca de</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="servicios.html">Cursos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
             <li><a href="registro.html">Registro</a></li>
         </ul>
@@ -23,16 +23,26 @@
     <main class="container">
         <section>
             <h2>Nuestra Misión</h2>
-            <p>Aquí puedes hablar sobre la misión de tu sitio, su propósito, o la historia detrás de tu proyecto. Por ejemplo, si es un sitio de recetas, puedes hablar sobre la importancia de la gastronomía paraguaya.</p>
-            <p>Asegúrate de que este contenido también sea accesible, usando un lenguaje claro y estructuras de encabezado adecuadas.</p>
+            <p>En [Nombre de tu Plataforma], nuestra misión es democratizar el acceso al conocimiento informático. Creemos firmemente que la educación tecnológica debe ser inclusiva y accesible para todos, sin importar su experiencia previa o sus capacidades.</p>
+            <p>Nos esforzamos por ofrecer cursos de alta calidad, prácticos y actualizados, que permitan a nuestros estudiantes adquirir las habilidades necesarias para prosperar en el mundo digital de hoy y de mañana.</p>
         </section>
         <section>
-            <h2>Nuestro Equipo</h2>
-            <p>Puedes añadir información sobre las personas detrás del proyecto, o los valores que lo impulsan.</p>
+            <h2>Nuestra Visión</h2>
+            <p>Ser la plataforma líder en Paraguay y la región para la formación en informática, reconocida por nuestra excelencia educativa, nuestro compromiso con la accesibilidad y nuestra comunidad de aprendizaje vibrante.</p>
+        </section>
+        <section>
+            <h2>Nuestros Valores</h2>
+            <ul>
+                <li>**Accesibilidad:** Contenido diseñado para ser usado por todos, incluyendo personas con discapacidad.</li>
+                <li>**Calidad:** Cursos creados y revisados por expertos de la industria.</li>
+                <li>**Innovación:** Actualización constante de contenidos para reflejar las últimas tecnologías.</li>
+                <li>**Comunidad:** Fomento de un ambiente de apoyo y colaboración entre estudiantes.</li>
+                <li>**Impacto:** Contribuir al desarrollo de talentos tecnológicos en la sociedad.</li>
+            </ul>
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Mi Sitio de Prueba. Todos los derechos reservados.</p>
+        <p>&copy; 2025 [Nombre de tu Plataforma]. Todos los derechos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
