--- a/contacto.html
+++ b/contacto.html
@@ -3,19 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - Mi Sitio con Accesibilidad</title>
+    <title>Contacto - Aprende Informática Fácil</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <header>
-        <h1>Contáctanos</h1>
+        <h1>¿Tienes Preguntas? Contáctanos</h1>
         <button id="toggle-theme-btn" aria-label="Alternar modo claro y oscuro">🌙 Oscuro</button>
     </header>
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="acerca.html">Acerca de</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="servicios.html">Cursos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
             <li><a href="registro.html">Registro</a></li>
         </ul>
@@ -23,7 +23,7 @@
     <main class="container">
         <section>
             <h2>Envíanos un Mensaje</h2>
-            <p>Utiliza el siguiente formulario para ponerte en contacto con nosotros. Nos aseguramos de que todos los campos sean claros y accesibles.</p>
+            <p>Utiliza el siguiente formulario para ponerte en contacto con nosotros. Nuestro equipo de soporte responderá a la brevedad.</p>
             <form action="#" method="post">
                 <label for="nombre">Nombre Completo:</label><br>
                 <input type="text" id="nombre" name="nombre" aria-label="Introduce tu nombre completo" required><br><br>
@@ -44,14 +44,14 @@
             <h2>Información de Contacto Adicional</h2>
             <p>También puedes encontrarnos en:</p>
             <ul>
-                <li>**Email**: info@misitio.com</li>
-                <li>**Teléfono**: +595 9XX XXX XXX</li>
-                <li>**Dirección**: Calle Falsa 123, Asunción, Paraguay</li>
+                <li>**Email de Soporte**: soporte@tuplataforma.com</li>
+                <li>**Teléfono**: +595 9XX XXX XXX (Solo horario de oficina)</li>
+                <li>**Dirección (Oficina Central)**: Calle Conocimiento Digital 456, Asunción, Paraguay</li>
             </ul>
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Mi Sitio de Prueba. Todos los derechos reservados.</p>
+        <p>&copy; 2025 [Nombre de tu Plataforma]. Todos los derechos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
