--- a/index.html
+++ b/index.html
@@ -3,35 +3,58 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - Mi Sitio con Accesibilidad</title>
+    <title>Inicio - Aprende Informática Fácil</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <header>
-        <h1>¡Bienvenido a Mi Sitio de Prueba!</h1>
+        <h1>Tu Viaje de Aprendizaje en Informática Comienza Aquí</h1>
         <button id="toggle-theme-btn" aria-label="Alternar modo claro y oscuro">🌙 Oscuro</button>
     </header>
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="acerca.html">Acerca de</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="servicios.html">Cursos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
             <li><a href="registro.html">Registro</a></li>
         </ul>
     </nav>
     <main class="container">
         <section id="inicio">
-            <h2>Página Principal</h2>
-            <p>Este es el punto de partida de tu sitio web. Puedes añadir una breve introducción a la temática de tu proyecto aquí.</p>
-            <p>Explora las diferentes secciones para ver cómo se implementa la accesibilidad.</p>
-            <img src="https://via.placeholder.com/400x200?text=Imagen+de+Inicio" alt="Una imagen ilustrativa de bienvenida al sitio.">
+            <h2>Bienvenido a [Nombre de tu Plataforma]</h2>
+            <p>Descubre el fascinante mundo de la informática con nuestros cursos diseñados para todos los niveles, desde principiantes hasta expertos.</p>
+            <p>En [Nombre de tu Plataforma], creemos que el conocimiento tecnológico debe ser accesible para todos. Explora nuestro catálogo y empieza a construir tu futuro digital hoy mismo.</p>
+            <img src="https://via.placeholder.com/400x200?text=Aprende+Informatica" alt="Una persona estudiando en una computadora, simbolizando el aprendizaje de informática.">
+            
+            <p style="text-align: center; margin-top: 30px;">
+                <a href="servicios.html" class="btn-principal">Explora Nuestros Cursos</a>
+            </p>
         </section>
+
+        <hr>
+
+        <section id="destacados">
+            <h2>Cursos Destacados</h2>
+            <div class="curso-destacado">
+                <h3>Introducción a la Programación con Python</h3>
+                <p>Aprende los fundamentos de la programación con Python, el lenguaje más popular para principiantes. Ideal para iniciar tu carrera tecnológica.</p>
+                <span class="nivel">Nivel: Principiante</span>
+                <span class="duracion">Duración: 20 horas</span>
+            </div>
+            <div class="curso-destacado">
+                <h3>Diseño Web Responsivo con HTML y CSS</h3>
+                <p>Crea sitios web atractivos y adaptables a cualquier dispositivo. Domina HTML5 y CSS3 para construir interfaces modernas.</p>
+                <span class="nivel">Nivel: Intermedio</span>
+                <span class="duracion">Duración: 25 horas</span>
+            </div>
+        </section>
+
     </main>
 
     <footer>
-        <p>&copy; 2025 Mi Sitio de Prueba. Todos los derechos reservados.</p>
-        <p>Sitio creado para el trabajo práctico final con foco en accesibilidad.</p>
+        <p>&copy; 2025 [Nombre de tu Plataforma]. Todos los derechos reservados.</p>
+        <p>Impulsando el conocimiento tecnológico con accesibilidad.</p>
     </footer>
 
     <script src="script.js"></script>
