--- a/registro.html
+++ b/registro.html
@@ -3,28 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro de Usuario - Mi Sitio con Accesibilidad</title>
+    <title>Registro de Usuario - Aprende Informática Fácil</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <header>
-        <h1>Registro de Usuario</h1>
+        <h1>Crea tu Cuenta Gratuita</h1>
         <button id="toggle-theme-btn" aria-label="Alternar modo claro y oscuro">🌙 Oscuro</button>
     </header>
     <nav>
         <ul>
             <li><a href="index.html">Inicio</a></li>
             <li><a href="acerca.html">Acerca de</a></li>
-            <li><a href="servicios.html">Servicios</a></li>
+            <li><a href="servicios.html">Cursos</a></li>
             <li><a href="contacto.html">Contacto</a></li>
             <li><a href="registro.html">Registro</a></li>
         </ul>
     </nav>
     <main class="container">
         <section>
-            <h2>Crea tu Cuenta</h2>
-            <p>Por favor, completa el siguiente formulario para registrarte. Asegúrate de que tus datos sigan el formato regional de Paraguay.</p>
-            <form action="#" method="post">
+            <h2>Únete a Nuestra Comunidad de Aprendizaje</h2>
+            <p>Regístrate para acceder a contenido exclusivo, seguir tu progreso y recibir actualizaciones de nuevos cursos. Por favor, completa el siguiente formulario. Tus datos de identificación seguirán el formato regional de Paraguay.</p>
+            <form action="#" method="post" id="registroForm">
                 <label for="nombre_reg">Nombre Completo:</label><br>
                 <input type="text" id="nombre_reg" name="nombre_reg" aria-label="Introduce tu nombre completo" required><br><br>
 
@@ -45,7 +45,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 Mi Sitio de Prueba. Todos los derechos reservados.</p>
+        <p>&copy; 2025 [Nombre de tu Plataforma]. Todos los derechos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
