--- a/acerca.html
+++ b/acerca.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Acerca de - Aprende Informática Fácil</title>
+    <title>Acerca de - EduTech</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <header>
-        <h1>Acerca de Nosotros</h1>
+        <h1>Acerca de EduTech</h1>
         <button id="toggle-theme-btn" aria-label="Alternar modo claro y oscuro">🌙 Oscuro</button>
     </header>
     <nav>
@@ -23,7 +23,7 @@
     <main class="container">
         <section>
             <h2>Nuestra Misión</h2>
-            <p>En [Nombre de tu Plataforma], nuestra misión es democratizar el acceso al conocimiento informático. Creemos firmemente que la educación tecnológica debe ser inclusiva y accesible para todos, sin importar su experiencia previa o sus capacidades.</p>
+            <p>En EduTech, nuestra misión es democratizar el acceso al conocimiento informático. Creemos firmemente que la educación tecnológica debe ser inclusiva y accesible para todos, sin importar su experiencia previa o sus capacidades.</p>
             <p>Nos esforzamos por ofrecer cursos de alta calidad, prácticos y actualizados, que permitan a nuestros estudiantes adquirir las habilidades necesarias para prosperar en el mundo digital de hoy y de mañana.</p>
         </section>
         <section>
@@ -42,7 +42,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 [Nombre de tu Plataforma]. Todos los derechos reservados.</p>
+        <p>&copy; 2025 EduTech. Todos los derechos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
