--- a/contacto.html
+++ b/contacto.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto - Aprende Informática Fácil</title>
+    <title>Contacto - EduTech</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <header>
-        <h1>¿Tienes Preguntas? Contáctanos</h1>
+        <h1>Contacto - EduTech</h1>
         <button id="toggle-theme-btn" aria-label="Alternar modo claro y oscuro">🌙 Oscuro</button>
     </header>
     <nav>
@@ -44,14 +44,14 @@
             <h2>Información de Contacto Adicional</h2>
             <p>También puedes encontrarnos en:</p>
             <ul>
-                <li>**Email de Soporte**: soporte@tuplataforma.com</li>
+                <li>**Email de Soporte**: soporte@edutech.com</li>
                 <li>**Teléfono**: +595 9XX XXX XXX (Solo horario de oficina)</li>
                 <li>**Dirección (Oficina Central)**: Calle Conocimiento Digital 456, Asunción, Paraguay</li>
             </ul>
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 [Nombre de tu Plataforma]. Todos los derechos reservados.</p>
+        <p>&copy; 2025 EduTech. Todos los derechos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
