--- a/registro_exitoso.html
+++ b/registro_exitoso.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Registro Exitoso - Aprende Informática Fácil</title>
+    <title>Registro Exitoso - EduTech</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Registro Exitoso</h1>
+        <h1>Registro Exitoso en EduTech</h1>
         <button id="toggle-theme-btn" aria-label="Alternar modo claro y oscuro">🌙 Oscuro</button>
     </header>
     <nav>
@@ -29,7 +29,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 [Nombre de tu Plataforma]. Todos los derechos reservados.</p>
+        <p>&copy; 2025 EduTech. Todos los derechos reservados.</p>
     </footer>
     <script src="script.js"></script>
 </body>
