--- a/servicios.html
+++ b/servicios.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cursos - Aprende Informática Fácil</title>
+    <title>Cursos - EduTech</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <header>
-        <h1>Explora Nuestro Catálogo de Cursos</h1>
+        <h1>Cursos en EduTech</h1>
         <button id="toggle-theme-btn" aria-label="Alternar modo claro y oscuro">🌙 Oscuro</button>
     </header>
     <nav>
@@ -22,7 +22,7 @@
     </nav>
     <main class="container">
         <section>
-            <h2>Cursos Disponibles</h2>
+            <h2>Explora Nuestro Catálogo de Cursos</h2>
             <p>Descubre nuestra variedad de cursos adaptados a diferentes niveles y áreas de la informática.</p>
 
             <div class="curso-card">
@@ -72,7 +72,7 @@
         </section>
     </main>
     <footer>
-        <p>&copy; 2025 [Nombre de tu Plataforma]. Todos los derechos reservados.</p>
+        <p>&copy; 2025 EduTech. Todos los derechos reservados.</p>
     </footer>
 
     <script src="script.js"></script>
