--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Inicio - Aprende Informática Fácil</title>
+    <title>Inicio - EduTech</title>
     <link rel="stylesheet" href="style.css"> 
 </head>
 <body>
     <header>
-        <h1>Tu Viaje de Aprendizaje en Informática Comienza Aquí</h1>
+        <h1>EduTech</h1>
         <button id="toggle-theme-btn" aria-label="Alternar modo claro y oscuro">🌙 Oscuro</button>
     </header>
     <nav>
@@ -22,10 +22,10 @@
     </nav>
     <main class="container">
         <section id="inicio">
-            <h2>Bienvenido a [Nombre de tu Plataforma]</h2>
+            <h2>Tu Viaje de Aprendizaje en Informática Comienza Aquí</h2>
             <p>Descubre el fascinante mundo de la informática con nuestros cursos diseñados para todos los niveles, desde principiantes hasta expertos.</p>
-            <p>En [Nombre de tu Plataforma], creemos que el conocimiento tecnológico debe ser accesible para todos. Explora nuestro catálogo y empieza a construir tu futuro digital hoy mismo.</p>
-            <img src="https://via.placeholder.com/400x200?text=Aprende+Informatica" alt="Una persona estudiando en una computadora, simbolizando el aprendizaje de informática.">
+            <p>En EduTech, creemos que el conocimiento tecnológico debe ser accesible para todos. Explora nuestro catálogo y empieza a construir tu futuro digital hoy mismo.</p>
+            <img src="persona_estudiando.jpeg" alt="Una persona joven de diversas etnias estudiando en una computadora portátil, con un fondo digital abstracto que simboliza el aprendizaje de informática y la tecnología.">
             
             <p style="text-align: center; margin-top: 30px;">
                 <a href="servicios.html" class="btn-principal">Explora Nuestros Cursos</a>
@@ -53,7 +53,7 @@
     </main>
 
     <footer>
-        <p>&copy; 2025 [Nombre de tu Plataforma]. Todos los derechos reservados.</p>
+        <p>&copy; 2025 EduTech. Todos los derechos reservados.</p>
         <p>Impulsando el conocimiento tecnológico con accesibilidad.</p>
     </footer>
 
