--- a/contacto.html
+++ b/contacto.html
@@ -44,9 +44,10 @@
             <h2>Información de Contacto Adicional</h2>
             <p>También puedes encontrarnos en:</p>
             <ul>
-                <li>**Email de Soporte**: soporte@edutech.com</li>
-                <li>**Teléfono**: +595 9XX XXX XXX (Solo horario de oficina)</li>
-                <li>**Dirección (Oficina Central)**: Calle Conocimiento Digital 456, Asunción, Paraguay</li>
+                <li>Email de Soporte: soporte@edutech.com</li>
+                <li>Teléfono: +595 981 234 567 </li>
+                <li>Horarios: Lunes a Viernes - De 8:00 a 17:30.</li>
+                <li>Dirección (Oficina Central)**: Calle Petereby 456, Villa Elisa, Paraguay</li>
             </ul>
         </section>
     </main>
