--- a/acerca.html
+++ b/acerca.html
@@ -33,10 +33,10 @@
         <section>
             <h2>Nuestros Valores</h2>
             <ul>
-                <li>**Calidad:** Cursos creados y revisados por expertos de la industria.</li>
-                <li>**Innovación:** Actualización constante de contenidos para reflejar las últimas tecnologías.</li>
-                <li>**Comunidad:** Fomento de un ambiente de apoyo y colaboración entre estudiantes.</li>
-                <li>**Impacto:** Contribuir al desarrollo de talentos tecnológicos en la sociedad.</li>
+                <li>Calidad: Cursos creados y revisados por expertos de la industria.</li>
+                <li>Innovación: Actualización constante de contenidos para reflejar las últimas tecnologías.</li>
+                <li>Comunidad: Fomento de un ambiente de apoyo y colaboración entre estudiantes.</li>
+                <li>Impacto: Contribuir al desarrollo de talentos tecnológicos en la sociedad.</li>
             </ul>
         </section>
     </main>
