--- a/contacto.html
+++ b/contacto.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Contacto - EduTech</h1>
-        <button id="toggle-theme-btn" aria-label="Alternar modo claro y oscuro">🌙 Oscuro</button>
+        <button id="toggle-theme-btn" aria-label="Alternar modo claro y oscuro">🌙</button>
     </header>
     <nav>
         <ul>
@@ -45,8 +45,8 @@
             <p>También puedes encontrarnos en:</p>
             <ul>
                 <li>Email de Soporte: soporte@edutech.com</li>
-                <li>Teléfono: +595 981 234 567 </li>
-                <li>Horarios: Lunes a Viernes - De 8:00 a 17:30.</li>
+                <li>Teléfono: +595 981 111 222</li>
+                <li>Horario: Lunes a Viernes - 08:00 a 17:30 hs</li>
                 <li>Dirección (Oficina Central)**: Calle Petereby 456, Villa Elisa, Paraguay</li>
             </ul>
         </section>
