--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>EduTech</h1>
-        <button id="toggle-theme-btn" aria-label="Alternar modo claro y oscuro">🌙 Oscuro</button>
+        <button id="toggle-theme-btn" aria-label="Alternar modo claro y oscuro">🌙</button>
     </header>
     <nav>
         <ul>
@@ -25,7 +25,7 @@
             <h2>Tu Viaje de Aprendizaje en Informática Comienza Aquí</h2>
             <p>Descubre el fascinante mundo de la informática con nuestros cursos diseñados para todos los niveles, desde principiantes hasta expertos.</p>
             <p>En EduTech, creemos que el conocimiento tecnológico debe ser accesible para todos. Explora nuestro catálogo y empieza a construir tu futuro digital hoy mismo.</p>
-            <img src="persona_estudiando.jpeg" alt="Una persona joven de diversas etnias estudiando en una computadora portátil, con un fondo digital abstracto que simboliza el aprendizaje de informática y la tecnología.">
+            <img src="tu-imagen-ia.jpg" alt="Una persona joven de diversas etnias estudiando en una computadora portátil, con un fondo digital abstracto que simboliza el aprendizaje de informática y la tecnología.">
             
             <p style="text-align: center; margin-top: 30px;">
                 <a href="servicios.html" class="btn-principal">Explora Nuestros Cursos</a>
