--- a/servicios.html
+++ b/servicios.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <h1>Cursos en EduTech</h1>
-        <button id="toggle-theme-btn" aria-label="Alternar modo claro y oscuro">🌙 Oscuro</button>
+        <button id="toggle-theme-btn" aria-label="Alternar modo claro y oscuro">🌙</button>
     </header>
     <nav>
         <ul>
